--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
 <head>
     <title>Flash Cards</title>
     <!-- We've provided some styles for you, aren't we nice? -->
-    <link rel="stylesheet" type="text/css" href="reset.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
-<body ng-app="flashCards" ng-controller="MainController">
-    <div>
-        <button ng-repeat="category in categories" class="category-button" ng-click="getCategoryCards(category)">{{ category }}</button>
+<body ng-app="flashCards" >
+    <div ng-controller="StatsController" id="statistics">
+        <div id="scoreboard">
+            <h3>Correct: <span>{{ scores.correct }}</span></h3>
+            <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
+        </div>
     </div>
-    <div ng-repeat="flashCard in flashCards | orderBy : 'question'" class="flash-card">
-        <h1>{{ flashCard.question | uppercase }}</h1>
-        <ul class="flash-card-answers">
-            <li ng-repeat="answer in flashCard.answers" class="flash-card-answer" ng-click="answerQuestion(answer, flashCard)">{{ answer.text }}</li>
-        </ul>
-        <h2 class="answer-feedback" ng-class="flashCard.answeredCorrectly ? 'correct' : 'incorrect'" ng-show="flashCard.answered">
-                <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
-                <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
+    <div ng-controller="MainController">
+        <div>
+            <button ng-repeat="category in categories" class="category-button" ng-click="getCategoryCards(category); setActive($index)" ng-class="{'active': $index === selectedIndex}">{{ category }}</button>
+            <button class="category-button" ng-click="getCategoryCards(); setActive(-1)">Reset</button>
+        </div>
+        <div ng-repeat="flashCard in flashCards | orderBy : 'question'" class="flash-card">
+            <h3>{{flashCard.category}}</h3>
+            <h1>{{ flashCard.question | uppercase }}</h1>
+            <ul class="flash-card-answers">
+                <li ng-repeat="answer in flashCard.answers" class="flash-card-answer" ng-click="answerQuestion(answer, flashCard); updateScore(answer.correct)">{{ answer.text }}</li>
+            </ul>
+            <h2 class="answer-feedback" ng-class="flashCard.answeredCorrectly ? 'correct' : 'incorrect'" ng-show="flashCard.answered">
+                    <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
+                    <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
             </h2>
-    </div>
-    <script src="angular.js"></script>
-    <script src="app.js"></script>
-    <script src="main.controller.js"></script>
+        </div>
+    </div>d
+    <script src="/js/lib/angular.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/main.controller.js"></script>
+    <script src="/js/flashCardsFactory.js"></script>
+    <script src="/js/ScoreFactory.js"></script>
+    <script src="/js/StatsController.js"></script>
 </body>
 
 </html>
