--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
-<body ng-app="flashCards" >
-    <div ng-controller="StatsController" id="statistics">
-        <div id="scoreboard">
-            <h3>Correct: <span>{{ scores.correct }}</span></h3>
-            <h3>Incorrect: <span>{{ scores.incorrect }}</span></h3>
-        </div>
+<body ng-app="flashCards">
+    <div ng-include="'/statistics.html'">
     </div>
     <div ng-controller="MainController">
         <div>
@@ -21,23 +17,23 @@
             <button class="category-button" ng-click="getCategoryCards(); setActive(-1)">Reset</button>
         </div>
         <div ng-repeat="flashCard in flashCards | orderBy : 'question'" class="flash-card">
-            <h3>{{flashCard.category}}</h3>
+            <h3>{{ flashCard.category }}</h3>
             <h1>{{ flashCard.question | uppercase }}</h1>
             <ul class="flash-card-answers">
-                <li ng-repeat="answer in flashCard.answers" class="flash-card-answer" ng-click="answerQuestion(answer, flashCard); updateScore(answer.correct)">{{ answer.text }}</li>
+                <li ng-repeat="answer in flashCard.answers | cheat" class="flash-card-answer" ng-click="answerQuestion(answer, flashCard); updateScore(answer.correct)">{{ answer.text }}</li>
             </ul>
             <h2 class="answer-feedback" ng-class="flashCard.answeredCorrectly ? 'correct' : 'incorrect'" ng-show="flashCard.answered">
                     <span ng-show="flashCard.answeredCorrectly">Yeah, you got it right!</span>
                     <span ng-show="!flashCard.answeredCorrectly">Nope, you got it wrong.</span>
             </h2>
         </div>
-    </div>d
+    </div>
     <script src="/js/lib/angular.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/main.controller.js"></script>
+    <script src="/js/StatsController.js"></script>
     <script src="/js/flashCardsFactory.js"></script>
     <script src="/js/ScoreFactory.js"></script>
-    <script src="/js/StatsController.js"></script>
 </body>
 
 </html>
